pynestml/generated/PyNestMLParser.py
# Generated from PyNestMLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PyNestMLParser ( Parser ):

    grammarFileName = "PyNestMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'integer'", "'real'", "'string'", "'boolean'", "'void'", 
                     "'function'", "'inline'", "'return'", "'if'", "'elif'", 
                     "'else'", "'for'", "'while'", "'in'", "'step'", "'inf'", 
                     "'and'", "'or'", "'not'", "'recordable'", "'kernel'", 
                     "'model'", "'state'", "'parameters'", "'internals'", 
                     "'update'", "'equations'", "'input'", "'output'", "'continuous'", 
                     "'onReceive'", "'onCondition'", "'spike'", "'inhibitory'", 
                     "'excitatory'", "'@homogeneous'", "'@heterogeneous'", 
                     "'@'", "'...'", "'('", "')'", "'+'", "'~'", "'|'", 
                     "'^'", "'&'", "'['", "'<-'", "']'", "'[['", "']]'", 
                     "'<<'", "'>>'", "'<'", "'>'", "'<='", "'+='", "'-='", 
                     "'*='", "'/='", "'=='", "'!='", "'<>'", "'>='", "','", 
                     "'-'", "'='", "'*'", "'**'", "'/'", "'%'", "'?'", "':'", 
                     "'::'", "';'", "'''", "'.'" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "KERNEL_JOINING", 
                      "WS", "LINE_ESCAPE", "SL_COMMENT", "NEWLINE", "INTEGER_KEYWORD", 
                      "REAL_KEYWORD", "STRING_KEYWORD", "BOOLEAN_KEYWORD", 
                      "VOID_KEYWORD", "FUNCTION_KEYWORD", "INLINE_KEYWORD", 
                      "RETURN_KEYWORD", "IF_KEYWORD", "ELIF_KEYWORD", "ELSE_KEYWORD", 
                      "FOR_KEYWORD", "WHILE_KEYWORD", "IN_KEYWORD", "STEP_KEYWORD", 
                      "INF_KEYWORD", "AND_KEYWORD", "OR_KEYWORD", "NOT_KEYWORD", 
                      "RECORDABLE_KEYWORD", "KERNEL_KEYWORD", "MODEL_KEYWORD", 
                      "STATE_KEYWORD", "PARAMETERS_KEYWORD", "INTERNALS_KEYWORD", 
                      "UPDATE_KEYWORD", "EQUATIONS_KEYWORD", "INPUT_KEYWORD", 
                      "OUTPUT_KEYWORD", "CONTINUOUS_KEYWORD", "ON_RECEIVE_KEYWORD", 
                      "ON_CONDITION_KEYWORD", "SPIKE_KEYWORD", "INHIBITORY_KEYWORD", 
                      "EXCITATORY_KEYWORD", "DECORATOR_HOMOGENEOUS", "DECORATOR_HETEROGENEOUS", 
                      "AT", "ELLIPSIS", "LEFT_PAREN", "RIGHT_PAREN", "PLUS", 
                      "TILDE", "PIPE", "CARET", "AMPERSAND", "LEFT_SQUARE_BRACKET", 
                      "LEFT_ANGLE_MINUS", "RIGHT_SQUARE_BRACKET", "LEFT_LEFT_SQUARE", 
                      "RIGHT_RIGHT_SQUARE", "LEFT_LEFT_ANGLE", "RIGHT_RIGHT_ANGLE", 
                      "LEFT_ANGLE", "RIGHT_ANGLE", "LEFT_ANGLE_EQUALS", 
                      "PLUS_EQUALS", "MINUS_EQUALS", "STAR_EQUALS", "FORWARD_SLASH_EQUALS", 
                      "EQUALS_EQUALS", "EXCLAMATION_EQUALS", "LEFT_ANGLE_RIGHT_ANGLE", 
                      "RIGHT_ANGLE_EQUALS", "COMMA", "MINUS", "EQUALS", 
                      "STAR", "STAR_STAR", "FORWARD_SLASH", "PERCENT", "QUESTION", 
                      "COLON", "DOUBLE_COLON", "SEMICOLON", "DIFFERENTIAL_ORDER", 
                      "FULLSTOP", "BOOLEAN_LITERAL", "STRING_LITERAL", "NAME", 
                      "UNSIGNED_INTEGER", "FLOAT" ]

    RULE_dataType = 0
    RULE_unitTypeExponent = 1
    RULE_unitType = 2
    RULE_anyDecorator = 3
    RULE_namespaceDecoratorNamespace = 4
    RULE_namespaceDecoratorName = 5
    RULE_expression = 6
    RULE_simpleExpression = 7
    RULE_unaryOperator = 8
    RULE_bitOperator = 9
    RULE_comparisonOperator = 10
    RULE_logicalOperator = 11
    RULE_variable = 12
    RULE_functionCall = 13
    RULE_inlineExpression = 14
    RULE_odeEquation = 15
    RULE_kernel = 16
    RULE_stmt = 17
    RULE_compoundStmt = 18
    RULE_smallStmt = 19
    RULE_assignment = 20
    RULE_declaration = 21
    RULE_declaration_newline = 22
    RULE_stmtsBody = 23
    RULE_returnStmt = 24
    RULE_ifStmt = 25
    RULE_ifClause = 26
    RULE_elifClause = 27
    RULE_elseClause = 28
    RULE_forStmt = 29
    RULE_whileStmt = 30
    RULE_nestMLCompilationUnit = 31
    RULE_model = 32
    RULE_modelBody = 33
    RULE_onReceiveBlock = 34
    RULE_onConditionBlock = 35
    RULE_blockWithVariables = 36
    RULE_updateBlock = 37
    RULE_equationsBlock = 38
    RULE_inputBlock = 39
    RULE_spikeInputPort = 40
    RULE_continuousInputPort = 41
    RULE_inputQualifier = 42
    RULE_outputBlock = 43
    RULE_function = 44
    RULE_parameter = 45
    RULE_constParameter = 46

    ruleNames =  [ "dataType", "unitTypeExponent", "unitType", "anyDecorator", 
                   "namespaceDecoratorNamespace", "namespaceDecoratorName", 
                   "expression", "simpleExpression", "unaryOperator", "bitOperator", 
                   "comparisonOperator", "logicalOperator", "variable", 
                   "functionCall", "inlineExpression", "odeEquation", "kernel", 
                   "stmt", "compoundStmt", "smallStmt", "assignment", "declaration", 
                   "declaration_newline", "stmtsBody", "returnStmt", "ifStmt", 
                   "ifClause", "elifClause", "elseClause", "forStmt", "whileStmt", 
                   "nestMLCompilationUnit", "model", "modelBody", "onReceiveBlock", 
                   "onConditionBlock", "blockWithVariables", "updateBlock", 
                   "equationsBlock", "inputBlock", "spikeInputPort", "continuousInputPort", 
                   "inputQualifier", "outputBlock", "function", "parameter", 
                   "constParameter" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    KERNEL_JOINING=3
    WS=4
    LINE_ESCAPE=5
    SL_COMMENT=6
    NEWLINE=7
    INTEGER_KEYWORD=8
    REAL_KEYWORD=9
    STRING_KEYWORD=10
    BOOLEAN_KEYWORD=11
    VOID_KEYWORD=12
    FUNCTION_KEYWORD=13
    INLINE_KEYWORD=14
    RETURN_KEYWORD=15
    IF_KEYWORD=16
    ELIF_KEYWORD=17
    ELSE_KEYWORD=18
    FOR_KEYWORD=19
    WHILE_KEYWORD=20
    IN_KEYWORD=21
    STEP_KEYWORD=22
    INF_KEYWORD=23
    AND_KEYWORD=24
    OR_KEYWORD=25
    NOT_KEYWORD=26
    RECORDABLE_KEYWORD=27
    KERNEL_KEYWORD=28
    MODEL_KEYWORD=29
    STATE_KEYWORD=30
    PARAMETERS_KEYWORD=31
    INTERNALS_KEYWORD=32
    UPDATE_KEYWORD=33
    EQUATIONS_KEYWORD=34
    INPUT_KEYWORD=35
    OUTPUT_KEYWORD=36
    CONTINUOUS_KEYWORD=37
    ON_RECEIVE_KEYWORD=38
    ON_CONDITION_KEYWORD=39
    SPIKE_KEYWORD=40
    INHIBITORY_KEYWORD=41
    EXCITATORY_KEYWORD=42
    DECORATOR_HOMOGENEOUS=43
    DECORATOR_HETEROGENEOUS=44
    AT=45
    ELLIPSIS=46
    LEFT_PAREN=47
    RIGHT_PAREN=48
    PLUS=49
    TILDE=50
    PIPE=51
    CARET=52
    AMPERSAND=53
    LEFT_SQUARE_BRACKET=54
    LEFT_ANGLE_MINUS=55
    RIGHT_SQUARE_BRACKET=56
    LEFT_LEFT_SQUARE=57
    RIGHT_RIGHT_SQUARE=58
    LEFT_LEFT_ANGLE=59
    RIGHT_RIGHT_ANGLE=60
    LEFT_ANGLE=61
    RIGHT_ANGLE=62
    LEFT_ANGLE_EQUALS=63
    PLUS_EQUALS=64
    MINUS_EQUALS=65
    STAR_EQUALS=66
    FORWARD_SLASH_EQUALS=67
    EQUALS_EQUALS=68
    EXCLAMATION_EQUALS=69
    LEFT_ANGLE_RIGHT_ANGLE=70
    RIGHT_ANGLE_EQUALS=71
    COMMA=72
    MINUS=73
    EQUALS=74
    STAR=75
    STAR_STAR=76
    FORWARD_SLASH=77
    PERCENT=78
    QUESTION=79
    COLON=80
    DOUBLE_COLON=81
    SEMICOLON=82
    DIFFERENTIAL_ORDER=83
    FULLSTOP=84
    BOOLEAN_LITERAL=85
    STRING_LITERAL=86
    NAME=87
    UNSIGNED_INTEGER=88
    FLOAT=89

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.isInt = None # Token
            self.isReal = None # Token
            self.isString = None # Token
            self.isBool = None # Token
            self.isVoid = None # Token
            self.unit = None # UnitTypeContext

        def INTEGER_KEYWORD(self):
            return self.getToken(PyNestMLParser.INTEGER_KEYWORD, 0)

        def REAL_KEYWORD(self):
            return self.getToken(PyNestMLParser.REAL_KEYWORD, 0)

        def STRING_KEYWORD(self):
            return self.getToken(PyNestMLParser.STRING_KEYWORD, 0)

        def BOOLEAN_KEYWORD(self):
            return self.getToken(PyNestMLParser.BOOLEAN_KEYWORD, 0)

        def VOID_KEYWORD(self):
            return self.getToken(PyNestMLParser.VOID_KEYWORD, 0)

        def unitType(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_dataType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDataType" ):
                return visitor.visitDataType(self)
            else:
                return visitor.visitChildren(self)




    def dataType(self):

        localctx = PyNestMLParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dataType)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                localctx.isInt = self.match(PyNestMLParser.INTEGER_KEYWORD)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                localctx.isReal = self.match(PyNestMLParser.REAL_KEYWORD)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 96
                localctx.isString = self.match(PyNestMLParser.STRING_KEYWORD)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 97
                localctx.isBool = self.match(PyNestMLParser.BOOLEAN_KEYWORD)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 98
                localctx.isVoid = self.match(PyNestMLParser.VOID_KEYWORD)
                pass
            elif token in [47, 87, 88]:
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                localctx.unit = self.unitType(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitTypeExponentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.negative = None # Token
            self.leftParentheses = None # Token
            self.num = None # Token
            self.divOp = None # Token
            self.den = None # Token
            self.rightParentheses = None # Token

        def LEFT_PAREN(self):
            return self.getToken(PyNestMLParser.LEFT_PAREN, 0)

        def UNSIGNED_INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(PyNestMLParser.UNSIGNED_INTEGER)
            else:
                return self.getToken(PyNestMLParser.UNSIGNED_INTEGER, i)

        def FORWARD_SLASH(self):
            return self.getToken(PyNestMLParser.FORWARD_SLASH, 0)

        def RIGHT_PAREN(self):
            return self.getToken(PyNestMLParser.RIGHT_PAREN, 0)

        def MINUS(self):
            return self.getToken(PyNestMLParser.MINUS, 0)

        def FLOAT(self):
            return self.getToken(PyNestMLParser.FLOAT, 0)

        def PLUS(self):
            return self.getToken(PyNestMLParser.PLUS, 0)

        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitTypeExponent

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitTypeExponent" ):
                return visitor.visitUnitTypeExponent(self)
            else:
                return visitor.visitChildren(self)




    def unitTypeExponent(self):

        localctx = PyNestMLParser.UnitTypeExponentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_unitTypeExponent)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==73:
                    self.state = 102
                    localctx.negative = self.match(PyNestMLParser.MINUS)


                self.state = 105
                localctx.leftParentheses = self.match(PyNestMLParser.LEFT_PAREN)
                self.state = 106
                localctx.num = self.match(PyNestMLParser.UNSIGNED_INTEGER)
                self.state = 107
                localctx.divOp = self.match(PyNestMLParser.FORWARD_SLASH)
                self.state = 108
                localctx.den = self.match(PyNestMLParser.UNSIGNED_INTEGER)
                self.state = 109
                localctx.rightParentheses = self.match(PyNestMLParser.RIGHT_PAREN)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==49 or _la==73:
                    self.state = 110
                    _la = self._input.LA(1)
                    if not(_la==49 or _la==73):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 113
                _la = self._input.LA(1)
                if not(_la==88 or _la==89):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UnitTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.base = None # UnitTypeContext
            self.left = None # UnitTypeContext
            self.leftParentheses = None # Token
            self.compoundUnit = None # UnitTypeContext
            self.rightParentheses = None # Token
            self.unitlessLiteral = None # Token
            self.divOp = None # Token
            self.right = None # UnitTypeContext
            self.unit = None # Token
            self.timesOp = None # Token
            self.powOp = None # Token
            self.exponent = None # UnitTypeExponentContext

        def LEFT_PAREN(self):
            return self.getToken(PyNestMLParser.LEFT_PAREN, 0)

        def unitType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PyNestMLParser.UnitTypeContext)
            else:
                return self.getTypedRuleContext(PyNestMLParser.UnitTypeContext,i)


        def RIGHT_PAREN(self):
            return self.getToken(PyNestMLParser.RIGHT_PAREN, 0)

        def UNSIGNED_INTEGER(self):
            return self.getToken(PyNestMLParser.UNSIGNED_INTEGER, 0)

        def FORWARD_SLASH(self):
            return self.getToken(PyNestMLParser.FORWARD_SLASH, 0)

        def NAME(self):
            return self.getToken(PyNestMLParser.NAME, 0)

        def STAR(self):
            return self.getToken(PyNestMLParser.STAR, 0)

        def STAR_STAR(self):
            return self.getToken(PyNestMLParser.STAR_STAR, 0)

        def unitTypeExponent(self):
            return self.getTypedRuleContext(PyNestMLParser.UnitTypeExponentContext,0)


        def getRuleIndex(self):
            return PyNestMLParser.RULE_unitType

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnitType" ):
                return visitor.visitUnitType(self)
            else:
                return visitor.visitChildren(self)


